--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+body {
+    margin: o auto;
+}
+
 #main-container {
     box-sizing: border-box;
     font-family: "Poppins";
     margin: 0 auto;
+    width: 100%;
+
 }
 
 h1 {
@@ -16,7 +22,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    margin: auto;
+    margin: 0 auto;
 }
 
 header input {
@@ -52,7 +58,7 @@ header input[type="text"] {
     box-sizing: border-box;
     font-weight: bold;
     box-shadow: 0px 0px 30px #99606A;
-    margin: auto;
+    margin: 0 auto;
     font-family: "Poppins";
     align-items: flex-end;
 
