--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header {
     align-items: center;
     padding: 20px;
     margin: 0 auto;
+    box-sizing: border-box;
 }
 
 header input {
@@ -30,6 +31,7 @@ header input {
     height: 30px;
     border: 1px solid #78304f;
     border-radius: 5px;
+    
 }
 
 header input[type="text"] {
@@ -78,6 +80,14 @@ header input[type="text"] {
     height: 60px;
 }
 
+.today-date-and-sunset-time {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    height: 100%;
+}
+
 .weather-parameters {
     border: 1px solid #99606A;
     border-radius: 20px;
@@ -90,6 +100,7 @@ header input[type="text"] {
     text-align: left;
     padding: 5px;
     justify-content: space-between;
+    box-sizing: border-box;
 }
 
 #weather-icon {
@@ -178,7 +189,7 @@ header input[type="text"] {
     grid-row: 1/5;
     border-left: 2px solid #99606A;
     width: 30px;
-    height: 100%;
+    height: 80%;
 }
 
 .max-min-temperature {
@@ -228,7 +239,6 @@ header input[type="text"] {
 #min-temp-data,
 #max-temp-data {
     font-size: 25px;
-
 }
 
 #max-temp-icon {
@@ -243,8 +253,8 @@ header input[type="text"] {
 
 #min-temp-icon,
 #max-temp-icon {
-    height: 25px;
-    width: 25px;
+    height: 30px;
+    width: 30px;
 }
 
 
@@ -257,6 +267,7 @@ header input[type="text"] {
     align-content: space-around;
     justify-content: space-around;
     font-family: "Poppins";
+    box-sizing: border-box;
 }
 
 .day-forecast{
